tagged 0.4.3.   Fixed the ant build file finally to do all the right things....got rid of redundant confusing dirs. like target/rr and several files - why didn't I ever do this before?!?!  Also now have the 'resources' dir being copied into the classes dir and the icon images for the app are referenced on the classpath and can be found in the jar.

--- a/devel/build.properties
+++ b/devel/build.properties
@@ -2,6 +2,10 @@
 # specifically for each machine on which this project is build. However
 # all machine specific paths can hopefully be encapsulated to this file.
 
-project-home=/Users/brendan/Desktop/projects/roadrunner/devel
+project-home=/Users/brendan/Desktop/projects/conf-plugins-artemis/roadrunner/devel
 TOMCAT_HOME=/Users/brendan/Desktop/java/tomcat
-JUNIT_HOME=/Users/brendan/Desktop/java/junit3.8.1
+JUNIT_HOME=/Users/brendan/Desktop/java/junit4.4
+
+
+rr.output.classes.dir=${project-home}/target/classes
+rr.output.dir=${project-home}/target/roadrunner
