--- a/devel/bin/log4j.properties
+++ b/devel/bin/log4j.properties
@@ -14,13 +14,13 @@ log4j.appender.A1.layout.ConversionPattern=%d %-5p [%t] - %m%n
 log4j.appender.A2=org.apache.log4j.FileAppender
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.layout.ConversionPattern=%d %-5p [%t] - %m%n
-log4j.appender.A2.File=uwc.log
+log4j.appender.A2.File=rr.log
 
 
 log4j.appender.A3=org.apache.log4j.FileAppender
 log4j.appender.A3.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.layout.ConversionPattern=%d %-5p [%t] - %m%n
-log4j.appender.A3.File=uwc-totals.log
+log4j.appender.A3.File=rr-totals.log
 
 ## hide soap service debug messages - completely unnecessary
 log4j.logger.org.apache.axis=INFO, A1
