updated ANT build files to remove local dev path specific dependencies

--- a/devel/build.properties
+++ b/devel/build.properties
@@ -2,9 +2,10 @@
 # specifically for each machine on which this project is build. However
 # all machine specific paths can hopefully be encapsulated to this file.
 
-project-home=/Users/brendan/Desktop/projects/conf-plugins-artemis/roadrunner/devel
-TOMCAT_HOME=/Users/brendan/Desktop/java/tomcat
-JUNIT_HOME=/Users/brendan/Desktop/java/junit4.4
+project-home=.
+# project-home=/Users/brendan/Desktop/projects/conf-plugins-artemis/roadrunner/devel
+# TOMCAT_HOME=/Users/brendan/Desktop/java/tomcat
+# JUNIT_HOME=/Users/brendan/Desktop/java/junit4.4
 
 
 rr.output.classes.dir=${project-home}/target/classes
